[tool.poetry]
name = "frost"
version = "0.1.0"
description = ""
authors = ["Ole Martin Ruud <dev@barskern.no>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
python-dotenv = "^0.21.1"
pendulum = "^2.1.2"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
autopep8 = "^2.0.1"
flake8 = "^6.0.0"
autoflake8 = "^0.4.0"
pre-commit = "^2.21.0"
requests-cache = "^0.9.8"

[tool.poetry.scripts]
frost_fetch = "frost:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
